Fixed login/demo login pages on mobile and got rid of extra console log in login user controller function

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -429,7 +429,7 @@ button:disabled:hover {
 #mobile-display {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  height: 100vh;
   width: 100vw;
   position: sticky;
 }
